<resources>
    <string name="app_name">Mastering Maths</string>
    <string name="register_as_teacher">Register as a teacher</string>
    <string name="register_as_student">Register as a Student</string>
    <string name="I_already_have_an_account">I already have an account</string>
    <string name="create_new_account">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="app_intro">Welcome to Mastering Maths</string>
    <string name="input_email">Enter Email</string>
    <string name="nomor_nip">NIP number</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="daftar">Register</string>
    <string name="nomor_nis">NISN number</string>
    <string name="forgot_password">forget Password?</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="forum">Forum</string>
    <string name="profil">Profile</string>
    <string-array name="grade_level_list">
        <item>SMP Kelas VIII</item>
        <item>SMA Kelas XI</item>
    </string-array>
    <string-array name="lesson_list">
        <item>Relasi dan Fungsi</item>
        <item>Teorema Pythagoras</item>
        <item>Pola Bilangan</item>
        <item>Persamaan Garis Lurus</item>
        <item>Koordinat Cartesius</item>
        <item>SPLDV</item>
        <item>Kaidah Pencacahan</item>
        <item>Matriks</item>
        <item>Peluang</item>
        <item>Baris dan Deret</item>
        <item>Limit Fungsi</item>
        <item>Turunan Fungsi</item>
        <item>Tiga Dimensi</item>
        <item>Trigonometri</item>
        <item>Transformasi</item>
    </string-array>
    <string name="pythagoras">Pythagoras</string>
    <string name="peluang">Peluang</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="bangun_ruang">Bangun Ruang</string>
    <string name="statistics">Statistics</string>
    <string name="uji_kompetensi">Uji Kompetensi</string>
    <string name="search">Search</string>
    <string name="list_chat_name">Name:</string>
    <string name="list_chat_nis">NIS:</string>
    <string name="no_discussion">No discussions yet</string>
    <string name="warning_input_data">Data cannot be empty</string>
    <string name="email_not_valid">The email entered is invalid</string>
    <string name="register_failed">Registration failed, please try again</string>
    <string name="password_not_valid">The passwords entered are not the same</string>
    <string name="register_success">Registration is successful</string>
    <string name="error_user_not_found">Incorrect email or password</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="error_wrong_password">The password you entered is wrong</string>
    <string name="error_request">An error occurred, please try again</string>
    <string name="email_password_null">Enter your Email and Password</string>
    <string name="lupa_password">Reset Password</string>
    <string name="logo_app">logo_app</string>
    <string name="send_reset_password">Please check your Inbox in your Email</string>
    <string name="request_data">...........</string>
    <string name="request_error">Data failed to load, please try again</string>
    <string name="icon">icon</string>
    <string name="user_address">Complete address</string>
    <string name="user_phone">Phone number</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="btn_simpan">Save</string>
    <string name="success_edit_profile">Profile changed successfully</string>
    <string name="txt_email_autentikasi">* This email is used for the authentication process</string>
    <string name="nama_sekolah">School name</string>
    <string name="nama_kota">City name</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="failed_show_photo">Failed to Display Photos</string>
    <string name="upload_success">Photo uploaded successfully</string>
    <string name="data_not_found">No data loaded</string>
    <string name="none_data">-</string>
    <string name="no_student">0 Member</string>
    <string name="alamat_email">Email address</string>
    <string name="nama_kelas">Class name</string>
    <string name="jenjang_pendidikan">Educational stage</string>
    <string name="buat_kelas">Create</string>
    <string name="empty_class">The class name cannot be empty</string>
    <string name="success_create_class">Class was successfully created</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="members">Member</string>
    <string name="no_active_class">There are no active classes</string>
    <string name="class_relasi_fungsi">Relasi dan Fungsi</string>
    <string name="gambar">picture</string>
    <string name="judul_tugas">Task Title</string>
    <string name="relasi_dan_fungsi">Relasi dan Fungsi</string>
    <string name="pengaturan">Settings</string>
    <string name="text_access_id">User ID and Class Code are used to invite students to enter the classroom</string>
    <string name="salin">Copy</string>
    <string name="kode_kelas">Class Code</string>
    <string name="akses">AKSES</string>
    <string name="use_id">User ID</string>
    <string name="edit_kelas">Edit Class</string>
    <string name="profil_kelas">PROFILE</string>
    <string name="hapus_kelas">Delete Class</string>
    <string name="success_edit_class">Data changed successfully</string>
    <string name="success_delete_class">Class deleted successfully</string>
    <string name="post">Posts</string>
    <string name="posting_sesuatu">Post something ....</string>
    <string name="success_upload_post">Post uploaded successfully</string>
    <string name="no_post_active">No posts</string>
    <string name="nothing_member">There are no active members</string>
    <string name="item_menu">item_menu</string>
    <string name="update_success">Post successfully modified</string>
    <string name="post_has_editted">Post has been deleted</string>
    <string name="input_message">Type a message</string>
    <string name="discussion">Discussion</string>
    <string name="pesan">Message</string>
    <string name="zero_class">0 Class</string>
    <string name="nothing_notification">No notification</string>
    <string name="no_chat_data">No chat</string>
    <string name="view_assignment">View Assignment</string>
    <string name="assignment_title">Title</string>
    <string name="assignment_description">Instructions / Description</string>
    <string name="upload_file">Upload File</string>
    <string name="nomor_nisn">NISN Number</string>
    <string name="lanjut">Continue</string>
    <string name="sebelumnya">Previous</string>
    <string name="id_guru">Id Teacher</string>
    <string name="masukan_id_guru">Enter Teacher Id</string>
    <string name="masukan_kode_kelas">Enter the Class Code</string>
    <string name="submit">Submit</string>
    <string name="s">S</string>
    <string name="sejarah">History</string>
    <string name="sejarah_relasi_dan_fungsi">History Relasi dan Fungsi</string>
    <string name="r">R</string>
    <string name="relasi">Relasi</string>
    <string name="materi_relasi_smp_kelas_viii">Materi Relasi SMP Kelas VIII</string>
    <string name="f">F</string>
    <string name="fungsi">Fungsi</string>
    <string name="materi_fungsi_smp_kelas_viii">Materi Fungsi SMP Kelas VIII</string>
    <string name="m1">M1</string>
    <string name="matematika_paket_1">Matematika Paket 1</string>
    <string name="m2">M2</string>
    <string name="matematika_paket_2">Matematika Paket 2</string>
    <string name="m3">M3</string>
    <string name="matematika_paket_3">Matematika Paket 3</string>
    <string name="m4">M4</string>
    <string name="matematika_paket_4">Matematika Paket 4</string>
    <string name="m5">M5</string>
    <string name="matematika_paket_5">Matematika Paket 5</string>
    <string name="m6">M6</string>
    <string name="matematika_paket_6">Matematika Paket 6</string>
    <string name="m7">M7</string>
    <string name="matematika_paket_7">Matematika Paket 7</string>
    <string name="m8">M8</string>
    <string name="matematika_paket_8">Matematika Paket 8</string>
    <string name="m9">M9</string>
    <string name="matematika_paket_9">Matematika Paket 9</string>
    <string name="m10">M10</string>
    <string name="matematika_paket_10">Matematika Paket 10</string>
    <string name="kumpulan_soal_matematika_bab_relasi">Kumpulan Soal Matematika Bab Relasi</string>
    <string name="kumpulan_soal_matematika_bab_fungsi">Kumpulan Soal Matematika Bab Fungsi</string>
    <string name="create_a_post">Create a post</string>
    <string name="rf">RF</string>
    <string name="finish">Finish</string>
    <string name="selesai">Done</string>
    <string name="notification">Notification</string>
    <string name="loading_progress">Currently Loading.....</string>
    <string name="teorema_pythagoras">Teorema Pythagoras</string>
    <string name="pola_bilangan">Pola Bilangan</string>
    <string name="persamaan_garis_lurus">Persamaan Garis Lurus</string>
    <string name="koordinat_cartesius">Koordinat Cartesius</string>
    <string name="spldv">SPLDV</string>
    <string name="download_assignment">Download Assignment</string>
    <string name="tulis_sesuatu">Write something…</string>
    <string name="attach">Attach</string>
    <string name="grade">Grade: 0/100</string>
    <string name="pengumpulan_tugas">COLLECTION OF TASK</string>
    <string name="txt_no_graded">No one has yet submitted the assignment</string>
    <string name="kirim">SEND</string>
    <string name="assignment_status">Status:</string>
    <string name="unduh_berkas">Download File</string>
    <string name="submission">Submission</string>
    <string name="beri_nilai_0_100">Rate it 0 – 100</string>
    <string name="grade_menu">GRADE</string>
    <string name="class_teorema_pyithagoras">Teorema Pythagoras</string>
    <string name="class_pola_bilangan">Pola Bilangan</string>
    <string name="class_persamaan_garis">Persamaan Garis</string>
    <string name="class_koordinat_cartesius">Koordinat Cartesius</string>
    <string name="class_spldv">SPLDV</string>
    <string name="kirm_pesan">Send Message</string>
    <string name="join_class">Join Class</string>
    <string name="pilih_mata_pelajaran">Select Subject</string>
    <string name="matrik_pencacahan">Matrik Pencacahan</string>
    <string name="txt_register">Dont Have an Account?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="class_list">Class</string>
    <string name="tv_no_lesson">There are no subjects yet</string>
    <string name="btn_register">Register</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_save">Save</string>
    <string name="input_class_name">Class Name</string>
    <string name="input_education_stage">Educational Stage</string>
    <string name="input_code_class">Class Code</string>
    <string name="input_post">Post Something....</string>
    <string name="post_has_deleted">Post deleted successfully</string>
    <string name="input_teacher_id">Teacher ID</string>
    <string name="btn_download_assignment">Download Assignment</string>
    <string name="btn_attach">Attach</string>
    <string name="btn_download_file">Download File</string>
    <string name="tv_submission">File Submitted</string>
    <string name="input_grade">Give Score 0 – 100</string>
    <string name="tv_select_lesson">Select Subject</string>
    <string name="kaidah_pencacahan">Kaidah Pencacahan</string>
    <string name="menu_class">Class</string>
    <string name="card_a">A</string>
    <string name="card_b">B</string>
    <string name="card_c">C</string>
    <string name="card_d">D</string>
</resources>