<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.activity.EditProfileStudentActivity">

    <include android:id="@+id/appbar"
        layout="@layout/toolbar_layout"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_nisn"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:hint="@string/nomor_nis"
                    app:startIconDrawable="@drawable/ic_nip">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_nisn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:hint="@string/full_name"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:hint="@string/email_address"
                    app:helperText="@string/txt_email_autentikasi"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:hint="@string/user_address"
                    app:startIconDrawable="@drawable/ic_location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_big_size"
                    android:layout_marginLeft="@dimen/margin_big_size"
                    android:layout_marginEnd="@dimen/margin_big_size"
                    android:layout_marginRight="@dimen/margin_big_size"
                    android:layout_marginTop="@dimen/margin_big_size"
                    android:hint="@string/user_phone"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_big_size"
                    android:text="@string/btn_save"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    app:cornerRadius="@dimen/btn_radius_corner" />

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>